Update to aspnet6

--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using core5_fluentvalidation_starter
-@namespace core5_fluentvalidation_starter.Pages
+﻿@using Net6ReactTsStarter
+@namespace Net6ReactTsStarter.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
